@@ -3,6 +3,9 @@ fixtures:
   repositories:
     augeasproviders_core: https://github.com/simp/augeasproviders_core
     augeasproviders_grub: https://github.com/simp/augeasproviders_grub
+    compliance_markup:
+      repo: "https://github.com/simp/pupmod-simp-compliance_markup"
+      branch: "testing_hotfix_06062019"
     simplib: https://github.com/simp/pupmod-simp-simplib
     stdlib: https://github.com/puppetlabs/puppetlabs-stdlib
   symlinks:
