@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
